cmake_minimum_required (VERSION 2.8)
project (vpercnode)
set(_ECLIPSE_VERSION "4.2")

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.54 COMPONENTS system log filesystem REQUIRED)
message(status "** Boost Include: ${Boost_INCLUDE_DIR}")
message(status "** Boost Libraries: ${Boost_LIBRARY_DIRS}")
message(status "** Boost Libraries: ${Boost_LIBRARIES}")

include_directories(src)
#link_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
add_executable(vpercnode src/vpercnode.cpp src/MoveTo.cpp src/JointInterpolateAngle.cpp)
#target_compile_features(vpercnode PRIVATE cxx_range_for)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") 

if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS}) 
	link_directories(${Boost_LIBRARY_DIRS})
	#add_executable(vpercnode vpercnode.cpp)
    target_link_libraries(vpercnode ${Boost_LIBRARIES})
endif()

include_directories(librabbitmq SimpleAmqpClient)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib_linux64/)
target_link_libraries(vpercnode ${CMAKE_CURRENT_SOURCE_DIR}/lib_linux64/librabbitmq.so ${CMAKE_CURRENT_SOURCE_DIR}/lib_linux64/libSimpleAmqpClient.so)

# http://stackoverflow.com/q/10688549/122441
set(MULTITHREADED_BUILD 8)
if(${CMAKE_GENERATOR} MATCHES "Unix Makefiles")
	message(STATUS ${CMAKE_BUILD_TOOL})
	#set(CMAKE_MAKE_COMMAND "${CMAKE_MAKE_PROGRAM} -j${MULTITHREADED_BUILD}")
	#message(STATUS "Added arguments to CMAKE_BUILD_TOOL: ${CMAKE_MAKE_PROGRAM}")
elseif(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
	message(STATUS "Added parallel build arguments to CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
endif()
